<resources>
	<string name="app_name">Hinj</string>
	<string name="blank" />
	<string name="action_settings">Settings</string>
	<string name="action_exit">Exit</string>
	<string name="action_share">Share</string>
	<string name="action_about">About</string>
	<string name="title">Disconnect</string>
	<string name="hello_world">Hello world!</string>
	<string name="drawer_open">Slider Menu Opened</string>
	<string name="app_id">1576844275891087</string>
	<string name="drawer_close">Slider Menu Closed</string>
	<string-array name="nav_drawer_items">
		<item>Home</item>
		<item>Message</item>
		<item>Apps</item>
		<item>Files</item>
		<item>Photos</item>
		<item>Music</item>
		<item>Videos</item>
		<item>Call Logs</item>
		<item>Contacts</item>
		<item>Locate Device</item>
		<item>Browser History</item>
		<item>Camera Capture</item>
		<item>Account</item>
	</string-array>
	<string name="menu_settings">Settings</string>
	<string name="enabled">Enabled?</string>
	<string name="which_contacts">Answer Which Calls?</string>
	<string name="delay">Delay Before Answer?</string>
	<string name="use_speakerphone">Force Speakerphone?</string>
	<string name="headset_only">Only Using BT Headset?</string>
	<string name="no_second_call">Don\'t Answer if In Call?</string>
	<string name="about_title">About</string>
	<string name="about_message">AutoAnswer Version 1.5\nCopyright (c) 2010
		EverySoft\n\nA simple Android application that automatically answers
		incoming calls.\n\nThis program is free software: you can redistribute
		it and/or modify it under the terms of the GNU General Public License
		as published by the Free Software Foundation, either version 3 of the
		License, or (at your option) any later version.\n\nThis program is
		distributed in the hope that it will be useful, but WITHOUT ANY
		WARRANTY; without even the implied warranty of MERCHANTABILITY or
		FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
		for more details.\n\nYou should have received a copy of the GNU
		General Public License along with this program. If not, see
		http://www.gnu.org/licenses/.\n\nChanges:\n1.5 - new answer routine
		should support more phones (thanks to Tedd\'s Droid Tools!)\n\n1.4 -
		added notification bar icon\n\n1.3 - added experimental BT headset
		detection\n\n1.2 - added support for froyo and the ability to ignore
		calls when there is already a call in process (ignore second
		call)\n\n1.1 - added configurable delay before answer\n\n1.0 - initial
		release</string>
	<string name="license_title">License</string>
	<string name="efp__action_select_all">Select all</string>
	<string name="efp__action_deselect">Deselect</string>
	<string name="efp__action_invert_selection">Invert selection</string>
	<string name="efp__new_folder">New folder</string>
	<string name="efp__sort">Sort</string>
</resources>